--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <label for="archive">Archive</label>
   </div>
   <div>
-    <input type="file" id="file" style="display: none" />
-    <button onclick="$file.click()">Choose File</button>
+    <input type="file" id="file" />
     <span id="fileinfo"></span>
   </div>
   <div>
