--- a/xp/index.html
+++ b/xp/index.html
@@ -155,7 +155,7 @@ addEventListener('load', () => {
       setTimeout(r, t);
     });
   const setReady = (x) => {
-    $x.disabled = $p.disabled = !x;
+    $x.disabled = $p.disabled = $g.disabled = $s.disabled = $v.disabled = !x;
   };
   const go = new Go();
   let mod, inst;
